# hr-view

./: Cargo.toml  README.md
src/: config.rs  hrm.rs  hrs_device.rs  lib.rs  locales.rs  main.rs
src/app/: bluetooth.rs  boot.rs  mod.rs  subscription.rs  update.rs  view.rs
