[package]
name = "hr-view"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
strip = "debuginfo"
codegen-units = 1
debug = false
overflow-checks = false

[dependencies]
btleplug = "0.11.8"
iced_aw = { version = "0.13.0", default-features = false, features = ["labeled_frame", "selection_list"] }
log = "0.4.29"
env_logger = "0.11.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sys-locale = "0.3.2"
uuid = "1.20.0"

[dependencies.iced]
version = "0.14.0"
default-features = false
features = [
  "tiny-skia",
  "crisp",
  "web-colors",
  "thread-pool",
  "linux-theme-detection",
  "x11",
  "wayland",
]

